fixed home blog visibility

--- a/src/components/blogsSection/BlogsSection.module.css
+++ b/src/components/blogsSection/BlogsSection.module.css
@@ -116,21 +116,21 @@
   flex-direction: column;
   justify-content: flex-end;
   /* align-items: flex-end; */
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.5);
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
   font-family: "Open Sans", sans-serif;
   padding: 5px 20px 30px 20px;
 }
 
 .contentDiv p {
-  font-size: 13px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: 650;
   margin-bottom: 5px;
 }
 
 .contentDiv h5 {
-  font-size: 20px;
-  font-weight: 300;
+  font-size: 21px;
+  font-weight: 700;
   margin: 0;
 }
 
